--- a/style.css
+++ b/style.css
@@ -36,15 +36,9 @@ h1 {
 	text-decoration-color: red;
 }
 .change {
-	list-style: square;
-	display: block;
-	position: relative;
-    padding-top: 5px;
-    padding-bottom: 5px;
-/*    border: 1px solid blue;*/
-    margin-left: 450px;
-    width: 300px;
-    border-radius: 5px;
+display: block;
+list-style: square;
+border: 1px solid black;
 }
 .change:hover {
 	cursor: pointer;
